--- a/src/saar_website/templates/saar_website/produits/produit-10.html
+++ b/src/saar_website/templates/saar_website/produits/produit-10.html
@@ -16,132 +16,49 @@
         </div>
     </div>
     <!-- Header End -->
+<!-- Services Start -->
+<div class="container-fluid bg-white service">
+    <div class="container py-5">
 
-      <!-- Services Start -->
-      <div class="container-fluid bg-white service py-5">
-        <div class="container py-5">
-            <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                <h5 class="section-title px-3">Garanties</h5>
-                <h1 class="mb-0">Nos Garanties</h1>
-            </div>
-
-
-            {% comment %} <div class="row g-4">
-                <div class="col-lg-6">
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">WorldWide Tours</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-globe fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center  bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Hotel Reservation</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-hotel fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Travel Guides</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-user fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
-                                <div class="service-content text-end">
-                                    <h5 class="mb-4">Event Management</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-cog fa-4x text-primary"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row g-4">
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-globe fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">WorldWide Tours</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-hotel fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Hotel Reservation</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-user fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Travel Guides</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                <div class="service-icon p-4">
-                                    <i class="fa fa-cog fa-4x text-primary"></i>
-                                </div>
-                                <div class="service-content">
-                                    <h5 class="mb-4">Event Management</h5>
-                                    <p class="mb-0">Dolor sit amet consectetur adipisicing elit. Non alias eum, suscipit expedita corrupti officiis debitis possimus nam laudantium beatae quidem dolore consequuntur voluptate rem reiciendis, omnis sequi harum earum.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="text-center">
-                        <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Service More</a>
-                    </div>
-                </div>
-            </div> {% endcomment %}
-
-
+        <div class="mx-auto mb-5" style="max-width: 900px;">
+            {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
+            <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}} <br>Grâce au contrat JOKER BAILLEUR de SAAR Assurances, l'investissement dans l'immobilier locatif est une partie de plaisir.</P>
         </div>
+
+        <div class="mx-auto mb-4" style="max-width: 900px;">
+            <h1 class="mb-2" style="color: red;">NOS GARANTIES</h1>
+            <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                <li><strong>Incendie</strong></li>
+                <li><strong>LOYERS IMPAYES</strong></li> 
+                <li><strong>DETERIORATIONS IMMOBILIERES</strong></li>
+                <li><strong>DEFENSE ET RECOURS</strong></li>               
+            </ul>
+        </div>
+
+        <div class="mx-auto mb-4" style="max-width: 900px;">
+            <h1 class="mb-2" style="color: red;">QUI PEUT SOUSCRIRE ?</h1>
+            <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Tout bailleur ou gestionnaire immobilier.</P>
+        </div>
+
+        <div class="mx-auto mb-4" style="max-width: 900px;">
+            <h1 class="mb-2" style="color: red;">POURQUOI SOUSCRIRE AU CONTRAT JOKER BAILLEUR ?</h1>
+            <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;"><strong>JOKER BAILLEUR</strong> est une solution qui garantit non seulement les revenus locatifs, mais également assure la pérennité du bien du bailleur en prenant en charge les dommages physiques que celui-ci peut subir.</P>
+            <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">En pratique, lorsqu'un promoteur immobilier s'engage dans les constructions de logements à but locatifs, il compte sur les loyers à percevoir pour faire face à ses multiples engagements et donc il encourt un risque d'insolvabilité en cas de non règlement du loyer par le locataire.</P>
+        </div>
+
+        <div class="mx-auto mb-4" style="max-width: 900px;">
+            <h1 class="mb-2" style="color: red;">COMMENT SOUSCRIRE A CE PRODUIT ?</h1>
+            <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Il suffit de <strong>remplir le questionnaire</strong> conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel bureau <strong>SAAR ASSURANCES</strong> en Côte d'Ivoire.</P>
+        </div>
+
+        {% comment %} <div class="mx-auto mb-4" style="max-width: 900px;">
+            <h1 class="mb-2" style="color: red;">QUE FAIRE EN CAS DE SINISTRE ?</h1>
+            <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Contactez MAPFRE ASSISTANCIA France au <strong>+33 4 37 37 28 98</strong>.</P>
+        </div> {% endcomment %}
+
     </div>
-    <!-- Services End -->
+</div>
+<!-- Services End -->
 
 
 {% endblock content %}
